@@ -51,7 +51,7 @@ func TestUpdateEnvVarsNew(t *testing.T) {
 	envToUpdate, envToRemove, err := util.OrderedMapAndRemovalListFromArray(argsEnv, "=")
 	assert.NilError(t, err)
 	args := append([]string{"command"}, argsEnv...)
-	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, util.NewOrderedMap(), []string{})
+	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, util.NewOrderedMap(), []string{}, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 	assert.DeepEqual(t, expected, spec.Containers[0].Env)
 }
@@ -71,7 +71,7 @@ func TestUpdateEnvVarsMixedEnvOrder(t *testing.T) {
 	envToUpdate, envToRemove, err := util.OrderedMapAndRemovalListFromArray(argsEnv, "=")
 	assert.NilError(t, err)
 	args := append([]string{"command"}, argsEnv...)
-	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, util.NewOrderedMap(), []string{})
+	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, util.NewOrderedMap(), []string{}, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 	assert.DeepEqual(t, expected, spec.Containers[0].Env)
 }
@@ -121,7 +121,7 @@ func TestUpdateEnvVarsValueFromNew(t *testing.T) {
 	args := append([]string{"command"}, argsEnvValueFrom...)
 	envValueFromToUpdate, envValueFromToRemove, err := util.OrderedMapAndRemovalListFromArray(argsEnvValueFrom, "=")
 	assert.NilError(t, err)
-	err = UpdateEnvVars(spec, args, util.NewOrderedMap(), []string{}, envValueFromToUpdate, envValueFromToRemove)
+	err = UpdateEnvVars(spec, args, util.NewOrderedMap(), []string{}, envValueFromToUpdate, envValueFromToRemove, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 	assert.DeepEqual(t, expected, spec.Containers[0].Env)
 }
@@ -162,7 +162,7 @@ func TestUpdateEnvVarsAllNew(t *testing.T) {
 	assert.NilError(t, err)
 	envValueFromToUpdate, envValueFromToRemove, err := util.OrderedMapAndRemovalListFromArray(argsEnvValueFrom, "=")
 	assert.NilError(t, err)
-	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, envValueFromToUpdate, envValueFromToRemove)
+	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, envValueFromToUpdate, envValueFromToRemove, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 	assert.DeepEqual(t, expected, spec.Containers[0].Env)
 }
@@ -197,7 +197,7 @@ func TestUpdateEnvVarsValueFromValidate(t *testing.T) {
 		args := append([]string{"command"}, input...)
 		envValueFromToUpdate, envValueFromToRemove, err := util.OrderedMapAndRemovalListFromArray(input, "=")
 		assert.NilError(t, err)
-		err = UpdateEnvVars(spec, args, util.NewOrderedMap(), []string{}, envValueFromToUpdate, envValueFromToRemove)
+		err = UpdateEnvVars(spec, args, util.NewOrderedMap(), []string{}, envValueFromToUpdate, envValueFromToRemove, "", util.NewOrderedMap(), []string{})
 		fmt.Println()
 		msg := fmt.Sprintf("input \"%s\" should fail, as it is not valid entry for containers.env.valueFrom", input[0])
 		assert.ErrorContains(t, err, " ", msg)
@@ -482,7 +482,7 @@ func TestUpdateEnvVarsModify(t *testing.T) {
 	args := append([]string{"command"}, argsEnv...)
 	envToUpdate, envToRemove, err := util.OrderedMapAndRemovalListFromArray(argsEnv, "=")
 	assert.NilError(t, err)
-	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, util.NewOrderedMap(), []string{})
+	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, util.NewOrderedMap(), []string{}, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 	assert.DeepEqual(t, expected, container.Env)
 }
@@ -516,7 +516,7 @@ func TestUpdateEnvVarsValueFromModify(t *testing.T) {
 	args := append([]string{"command"}, argsEnvValueFrom...)
 	envValueFromToUpdate, envValueFromToRemove, err := util.OrderedMapAndRemovalListFromArray(argsEnvValueFrom, "=")
 	assert.NilError(t, err)
-	err = UpdateEnvVars(spec, args, util.NewOrderedMap(), []string{}, envValueFromToUpdate, envValueFromToRemove)
+	err = UpdateEnvVars(spec, args, util.NewOrderedMap(), []string{}, envValueFromToUpdate, envValueFromToRemove, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 	assert.DeepEqual(t, expected, container.Env)
 }
@@ -557,7 +557,7 @@ func TestUpdateEnvVarsAllModify(t *testing.T) {
 	assert.NilError(t, err)
 	envValueFromToUpdate, envValueFromToRemove, err := util.OrderedMapAndRemovalListFromArray(argsEnvValueFrom, "=")
 	assert.NilError(t, err)
-	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, envValueFromToUpdate, envValueFromToRemove)
+	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, envValueFromToUpdate, envValueFromToRemove, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 	assert.DeepEqual(t, expected, container.Env)
 }
@@ -572,7 +572,7 @@ func TestUpdateEnvVarsRemove(t *testing.T) {
 	args := append([]string{"command"}, remove...)
 	envToUpdate, envToRemove, err := util.OrderedMapAndRemovalListFromArray(remove, "=")
 	assert.NilError(t, err)
-	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, util.NewOrderedMap(), []string{})
+	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, util.NewOrderedMap(), []string{}, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 
 	expected := []corev1.EnvVar{
@@ -606,7 +606,7 @@ func TestUpdateEnvVarsValueFromRemove(t *testing.T) {
 	args := append([]string{"command"}, remove...)
 	envValueFromToUpdate, envValueFromToRemove, err := util.OrderedMapAndRemovalListFromArray(remove, "=")
 	assert.NilError(t, err)
-	err = UpdateEnvVars(spec, args, util.NewOrderedMap(), []string{}, envValueFromToUpdate, envValueFromToRemove)
+	err = UpdateEnvVars(spec, args, util.NewOrderedMap(), []string{}, envValueFromToUpdate, envValueFromToRemove, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 
 	expected := []corev1.EnvVar{
@@ -659,7 +659,7 @@ func TestUpdateEnvVarsAllRemove(t *testing.T) {
 	assert.NilError(t, err)
 	envValueFromToUpdate, envValueFromToRemove, err := util.OrderedMapAndRemovalListFromArray(argsEnvValueFrom, "=")
 	assert.NilError(t, err)
-	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, envValueFromToUpdate, envValueFromToRemove)
+	err = UpdateEnvVars(spec, args, envToUpdate, envToRemove, envValueFromToUpdate, envValueFromToRemove, "", util.NewOrderedMap(), []string{})
 	assert.NilError(t, err)
 
 	expected := []corev1.EnvVar{
